manifests/opencode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencode-web
  labels:
    app: opencode-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencode-web
  template:
    metadata:
      labels:
        app: opencode-web
    spec:
      serviceAccountName: opencode-sa

      containers:
        # ---- main: opencode web ----
        - name: opencode
          image: crpi-wixjy6gci86ms14e.cn-hongkong.personal.cr.aliyuncs.com/ay-dev/opencode-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: opencode
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          ports:
            - containerPort: 4180
              name: auth-proxy
          args:
            - --provider=github
            - --github-user=AaronYang0628
            - --upstream=http://127.0.0.1:3000
            - --http-address=0.0.0.0:4180
            - --redirect-url=https://opencode.72602.online/oauth2/callback
            - --email-domain=*
            - --cookie-secure=true
            - --cookie-name=_opencode_auth
